fix whitespace styling

--- a/hello-world/angular/src/app/video-capture/video-capture.component.css
+++ b/hello-world/angular/src/app/video-capture/video-capture.component.css
@@ -7,4 +7,5 @@
   width: 100%;
   height: 10vh;
   overflow: auto;
+  white-space: pre-wrap;
 }
